Closed Bug 188877 Opened 23 years ago Closed 23 years ago

[FIX]Progress Dialog download crash -Trunk [@ nsXPCWrappedJS::GetInterfaceInfo]

Categories

(Core Graveyard :: File Handling, defect)

defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: relf, Assigned: bzbarsky)

References

()

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(1 file)

OS/2 build 2003011212 To reproduce: 1. Turn on Edit->Preferences->Navigator->Downloads->"Open a Progress Dialog" 2. Open provided URL 3. RMB click on "Load Large Graphic: 496,142 bytes" link 4. Choose "Save Target As...", select location to download, and click OK 5. Mozilla crashes when downloading finished ------------------------------------------------------------ 01-13-2003 03:34:20 SYS3175 PID 0054 TID 0001 Slot 006d O:\INTERNET\MOZILLA\MOZILLA.EXE c0000005 d03707cf P1=00000001 P2=d03707cf P3=XXXXXXXX P4=XXXXXXXX EAX=0ae475f0 EBX=0ae47980 ECX=0ae22648 EDX=00000000 ESI=018a9ab0 EDI=001317a8 DS=0053 DSACC=f0f3 DSLIM=ffffffff ES=0053 ESACC=f0f3 ESLIM=ffffffff FS=150b FSACC=00f3 FSLIM=00000030 GS=0000 GSACC=**** GSLIM=******** CS:EIP=005b:d03707cf CSACC=f0df CSLIM=ffffffff SS:ESP=0053:0013172c SSACC=f0f3 SSLIM=ffffffff EBP=00131848 FLG=00212206
Keywords: crash
Depends on: progressquit
seeing this on Linux too...
Assignee: law → bzbarsky
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: OS/2 → All
Hardware: PC → All
Summary: Progress Dialog download crash → [FIX]Progress Dialog download crash
Attached patch patch.... — — Splinter Review
Don't want to access members after we have been destroyed, no sirree.
Attachment #111400 - Flags: superreview?(jaggernaut)
Attachment #111400 - Flags: review?(caillon)
Comment on attachment 111400 [details] [diff] [review] patch.... Isn't that a rather complicated way of writing nsCOMPtr<nsIDownload> kungFuDeathGrip(do_QueryInterface(this));
Comment on attachment 111400 [details] [diff] [review] patch.... "this" has ambiguous inheritance from nsISupports; see bug 181387
ccing jag so's he can actually read answers to his questions. ;)
Comment on attachment 111400 [details] [diff] [review] patch.... Ugh. Comment and reference to bug 181387 then? Otherwise it's bound to get "cleaned up".
Comment on attachment 111400 [details] [diff] [review] patch.... Um, I can add a comment, sure. But attempts to "clean it up" won't compile, so I have my doubts that it will happen. ;)
Comment on attachment 111400 [details] [diff] [review] patch.... Then at least you'll prevent attempts to clean it up (and thus time wasted).
Attachment #111400 - Flags: superreview?(jaggernaut) → superreview+
Blocks: 188984
Attachment #111400 - Flags: review?(caillon) → review+
fixed.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 188964 has been marked as a duplicate of this bug. ***
Verified on the Win32 2003-01-15-08 trunk build (2003-01-15-08) and Mac OS X CFM Trunk (2003-01-15-08).
Status: RESOLVED → VERIFIED
Adding topcrash keyword and Trunk [@ nsXPCWrappedJS::GetInterfaceInfo] from duped bug 188964. No crashes reported after 1/13 builds.
Keywords: topcrash
Summary: [FIX]Progress Dialog download crash → [FIX]Progress Dialog download crash -Trunk [@ nsXPCWrappedJS::GetInterfaceInfo]
Crash Signature: [@ nsXPCWrappedJS::GetInterfaceInfo]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: