Fix crash on tearing down the download progress window.  Bug 188877, r=timeless, sr=jag